--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -101,6 +101,7 @@
                     android:fontFamily="@font/montserrat_semibold"
                     android:hint="@string/street"
                     android:maxLines="1"
+                    android:singleLine="true"
                     android:paddingLeft="@dimen/_15sdp"
                     android:paddingRight="@dimen/_15sdp"
                     android:textColor="@color/black"
@@ -116,6 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_8sdp"
+                    android:singleLine="true"
                     android:layout_marginRight="@dimen/_5sdp"
                     android:background="@drawable/ic_grey_address_bg"
                     android:fontFamily="@font/montserrat_semibold"
