--- a/app/src/main/res/layout/fragment_heena_leg_front_back_detail.xml
+++ b/app/src/main/res/layout/fragment_heena_leg_front_back_detail.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_bg_color"
-    tools:context=".heena.HeenaDetailFragment">
+    tools:context=".heena.HeenaDetailFragment"
+    tools:ignore="MissingDefaultResource">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
                     android:id="@+id/img_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_13"
+                    android:src="@drawable/leg_01_10"
                     android:layout_marginBottom="@dimen/_15sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +52,7 @@
                     android:id="@+id/ll1"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_60sdp"
+                    android:layout_marginLeft="@dimen/_90sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -88,7 +89,7 @@
                     android:id="@+id/img_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_12"
+                    android:src="@drawable/leg_01_09"
                     app:layout_constraintBottom_toTopOf="@id/view1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +109,7 @@
                     android:id="@+id/ll2"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
+                    android:layout_marginLeft="@dimen/_80sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -144,7 +145,7 @@
                     android:id="@+id/img_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_11"
+                    android:src="@drawable/leg_01_08"
                     app:layout_constraintBottom_toTopOf="@id/view2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +165,7 @@
                     android:id="@+id/ll3"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
+                    android:layout_marginLeft="@dimen/_75sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -201,7 +202,7 @@
                     android:id="@+id/img_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_10"
+                    android:src="@drawable/leg_01_07"
                     app:layout_constraintBottom_toTopOf="@id/view3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -221,7 +222,7 @@
                     android:id="@+id/ll4"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_55sdp"
+                    android:layout_marginLeft="@dimen/_70sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -258,7 +259,7 @@
                     android:id="@+id/img_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_09"
+                    android:src="@drawable/leg_01_06"
                     app:layout_constraintBottom_toTopOf="@id/view4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -278,7 +279,7 @@
                     android:id="@+id/ll5"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_60sdp"
+                    android:layout_marginLeft="@dimen/_70sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -315,7 +316,7 @@
                     android:id="@+id/img_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_08"
+                    android:src="@drawable/leg_01_05"
                     app:layout_constraintBottom_toTopOf="@id/view5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -335,7 +336,7 @@
                     android:id="@+id/ll6"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
+                    android:layout_marginLeft="@dimen/_80sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -372,7 +373,7 @@
                     android:id="@+id/img_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_07"
+                    android:src="@drawable/leg_01_04"
                     app:layout_constraintBottom_toTopOf="@id/view6"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -392,7 +393,7 @@
                     android:id="@+id/ll7"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
+                    android:layout_marginLeft="@dimen/_95sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -428,7 +429,7 @@
                     android:id="@+id/img_8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_06"
+                    android:src="@drawable/leg_01_03"
                     app:layout_constraintBottom_toTopOf="@id/view7"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -448,7 +449,7 @@
                     android:id="@+id/ll8"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_68sdp"
+                    android:layout_marginLeft="@dimen/_100sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -484,7 +485,7 @@
                     android:id="@+id/img_9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_05"
+                    android:src="@drawable/leg_01_02"
                     app:layout_constraintBottom_toTopOf="@id/view8"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -504,7 +505,7 @@
                     android:id="@+id/ll9"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_70sdp"
+                    android:layout_marginLeft="@dimen/_110sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -541,7 +542,7 @@
                     android:id="@+id/img_10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_03"
+                    android:src="@drawable/leg_01_01"
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintBottom_toTopOf="@id/view9"
                     app:layout_constraintEnd_toEndOf="parent"
