--- a/app/src/main/res/layout/fragment_heena_leg_front_detail.xml
+++ b/app/src/main/res/layout/fragment_heena_leg_front_detail.xml
@@ -9,6 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layoutDirection="ltr"
         android:layout_height="match_parent">
 
         <ScrollView
@@ -22,14 +23,13 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layoutDirection="ltr"
                 android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/img_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_13"
+                    android:src="@drawable/leg_1"
                     android:layout_marginBottom="@dimen/_15sdp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
                     android:id="@+id/ll1"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_60sdp"
+                    android:layout_marginLeft="@dimen/_80sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -88,7 +88,7 @@
                     android:id="@+id/img_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_12"
+                    android:src="@drawable/leg_2"
                     app:layout_constraintBottom_toTopOf="@id/view1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +144,7 @@
                     android:id="@+id/img_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_11"
+                    android:src="@drawable/leg_3"
                     app:layout_constraintBottom_toTopOf="@id/view2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +164,7 @@
                     android:id="@+id/ll3"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
+                    android:layout_marginLeft="@dimen/_60sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -201,7 +201,7 @@
                     android:id="@+id/img_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_10"
+                    android:src="@drawable/leg_4"
                     app:layout_constraintBottom_toTopOf="@id/view3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -258,7 +258,7 @@
                     android:id="@+id/img_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_09"
+                    android:src="@drawable/leg_5"
                     app:layout_constraintBottom_toTopOf="@id/view4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -278,7 +278,7 @@
                     android:id="@+id/ll5"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_60sdp"
+                    android:layout_marginLeft="@dimen/_62sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -315,7 +315,7 @@
                     android:id="@+id/img_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_08"
+                    android:src="@drawable/leg_6"
                     app:layout_constraintBottom_toTopOf="@id/view5"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -335,7 +335,7 @@
                     android:id="@+id/ll6"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
+                    android:layout_marginLeft="@dimen/_67sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
@@ -372,7 +372,7 @@
                     android:id="@+id/img_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_07"
+                    android:src="@drawable/leg_7"
                     app:layout_constraintBottom_toTopOf="@id/view6"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -392,10 +392,10 @@
                     android:id="@+id/ll7"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_65sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
                     android:orientation="horizontal"
+                    android:layout_marginLeft="@dimen/_85sdp"
                     app:layout_constraintBottom_toBottomOf="@id/view7"
                     app:layout_constraintStart_toStartOf="@id/view7"
                     app:layout_constraintTop_toTopOf="@id/view7">
@@ -428,7 +428,7 @@
                     android:id="@+id/img_8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_06"
+                    android:src="@drawable/leg_8"
                     app:layout_constraintBottom_toTopOf="@id/view7"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -448,9 +448,9 @@
                     android:id="@+id/ll8"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_68sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
+                    android:layout_marginLeft="@dimen/_95sdp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@id/view8"
                     app:layout_constraintStart_toStartOf="@id/view8"
@@ -484,7 +484,7 @@
                     android:id="@+id/img_9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_05"
+                    android:src="@drawable/leg_9"
                     app:layout_constraintBottom_toTopOf="@id/view8"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -504,9 +504,9 @@
                     android:id="@+id/ll9"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/_30sdp"
-                    android:layout_marginLeft="@dimen/_70sdp"
                     android:elevation="@dimen/_10sdp"
                     android:gravity="center"
+                    android:layout_marginLeft="@dimen/_110sdp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@id/view9"
                     app:layout_constraintStart_toStartOf="@id/view9"
@@ -541,7 +541,7 @@
                     android:id="@+id/img_10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/hand_03"
+                    android:src="@drawable/leg_10"
                     android:layout_marginTop="@dimen/_15sdp"
                     app:layout_constraintBottom_toTopOf="@id/view9"
                     app:layout_constraintEnd_toEndOf="parent"
