--- a/app/src/main/res/layout/custom_spinner_layout.xml
+++ b/app/src/main/res/layout/custom_spinner_layout.xml
@@ -10,6 +10,7 @@
     android:gravity="center_vertical"
     android:fontFamily="@font/montserrat_semibold"
     android:maxLines="1"
+    android:background="@color/bg_grey"
     android:paddingLeft="@dimen/_15sdp"
     android:paddingRight="@dimen/_15sdp"
     android:textColor="@color/black"
