--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -111,6 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     app:ccp_showNameCode="false"
+                    app:ccp_defaultPhoneCode="974"
                     app:ccp_textSize="@dimen/_12ssp" />
 
                 <View
