--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -125,6 +125,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    app:ccp_defaultPhoneCode="974"
                     app:ccp_showNameCode="false"
                     app:ccp_textSize="@dimen/_12ssp" />
 
