--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/img_back" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_profile"
+        android:id="@+id/img_profile1"
         android:layout_width="@dimen/_70sdp"
         android:layout_height="@dimen/_70sdp"
         android:layout_marginTop="@dimen/_40sdp"
@@ -48,8 +48,8 @@
         android:layout_marginRight="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:src="@drawable/ic_edit"
-        app:layout_constraintBottom_toBottomOf="@id/img_profile"
-        app:layout_constraintEnd_toEndOf="@id/img_profile"
+        app:layout_constraintBottom_toBottomOf="@id/img_profile1"
+        app:layout_constraintEnd_toEndOf="@id/img_profile1"
         app:tint="@color/white" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -63,7 +63,7 @@
         android:textSize="@dimen/_9ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_profile" />
+        app:layout_constraintTop_toBottomOf="@id/img_profile1" />
 
     <EditText
         android:id="@+id/txt_name"
@@ -159,6 +159,9 @@
             android:fontFamily="@font/montserrat_semibold"
             android:inputType="number"
             android:paddingLeft="@dimen/_25sdp"
+            android:editable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:singleLine="true"
             android:text="-------"
             android:textColor="@color/white"
