--- a/app/src/main/res/layout/service_adapter_item_layout.xml
+++ b/app/src/main/res/layout/service_adapter_item_layout.xml
@@ -11,7 +11,7 @@
         android:layout_marginRight="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/ll_quantity"
-        app:layout_constraintBottom_toTopOf="@id/txt_price"
+        app:layout_constraintBottom_toTopOf="@id/txtDescription"
         android:text="Small"
         android:textColor="@color/black"
         android:fontFamily="@font/montserrat_bold"
@@ -24,11 +24,28 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="0dp"
         android:textColor="@color/black"
-        android:maxLines="1"
+        android:maxLines="2"
         app:layout_constraintEnd_toStartOf="@id/ll_quantity"
         android:layout_marginRight="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_service_size"
+        app:layout_constraintBottom_toTopOf="@id/txt_price"
+        android:text=""
+        android:fontFamily="@font/montserrat_bold"
+        android:textStyle="bold"
+        android:id="@+id/txtDescription"
+        android:textSize="@dimen/_8ssp"
+        android:layout_marginLeft="@dimen/_15sdp"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="0dp"
+        android:textColor="@color/black"
+        android:maxLines="1"
+        app:layout_constraintEnd_toStartOf="@id/ll_quantity"
+        android:layout_marginRight="@dimen/_10sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtDescription"
         app:layout_constraintBottom_toBottomOf="@id/ll_quantity"
         android:text="QAR 20.00"
         android:fontFamily="@font/montserrat_bold"
@@ -37,7 +54,6 @@
         android:textSize="@dimen/_9ssp"
         android:layout_marginLeft="@dimen/_15sdp"
         android:layout_height="wrap_content"/>
-
 
     <View
         android:layout_width="0dp"
