--- a/app/src/main/res/layout/testimonal_pager_layout.xml
+++ b/app/src/main/res/layout/testimonal_pager_layout.xml
@@ -6,6 +6,7 @@
     android:layout_marginLeft="@dimen/_10sdp"
     android:layout_marginRight="@dimen/_10sdp"
     android:clipToPadding="true"
+    app:cardBackgroundColor="@color/white"
     android:elevation="@dimen/_10sdp"
     app:cardCornerRadius="@dimen/_10sdp"
     app:cardElevation="@dimen/_10sdp">
