--- a/app/src/main/res/layout/trending_pager_layout.xml
+++ b/app/src/main/res/layout/trending_pager_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/_200sdp"
     android:layout_height="match_parent"
     android:id="@+id/contentlayout"
     android:layout_marginLeft="@dimen/_10sdp"
@@ -68,14 +68,15 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@id/txt_description"
-            android:text="Scissors N' Rozers"
+            android:text=""
             android:maxLines="1"
+            android:layout_marginRight="@dimen/_10sdp"
             android:elevation="@dimen/_10sdp"
             app:fontFamily="@font/montserrat_semibold"
             android:id="@+id/txt_salon_name"
             app:layout_constraintStart_toStartOf="@id/txt_price"
             android:layout_marginBottom="@dimen/_3sdp"
-            app:layout_constraintEnd_toEndOf="@id/txt_price"
+            app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/white"
             android:textSize="@dimen/_12ssp"/>
 
