--- a/app/src/main/res/navigation/home_navigation.xml
+++ b/app/src/main/res/navigation/home_navigation.xml
@@ -169,6 +169,15 @@
             app:destination="@id/heenaDetailFragment"
             app:enterAnim="@anim/slide_from_right"
             app:exitAnim="@anim/slide_to_left" />
+        <action
+            android:id="@+id/action_subcategoryFragment_to_heenaLegFrontFragment"
+            app:destination="@id/heenaLegFrontFragment" />
+        <action
+            android:id="@+id/action_subcategoryFragment_to_heenaLegFrontBackFragment"
+            app:destination="@id/heenaLegFrontBackFragment" />
+        <action
+            android:id="@+id/action_subcategoryFragment_to_heenaHandFrontBackFragment"
+            app:destination="@id/heenaHandFrontBackFragment" />
     </fragment>
     <fragment
         android:id="@+id/cartFragment"
@@ -352,10 +361,60 @@
             app:destination="@id/addressFragment"
             app:enterAnim="@anim/slide_from_right"
             app:exitAnim="@anim/slide_to_left" />
+        <action
+            android:id="@+id/action_bookHeenaFragment_to_cartFragment"
+            app:destination="@id/cartFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
     </fragment>
     <fragment
         android:id="@+id/notificationsFragment"
         android:name="com.reemastyle.notification.NotificationsFragment"
         android:label="NotificationsFragment"
         tools:layout="@layout/fragment_notifications"/>
+    <fragment
+        android:id="@+id/heenaLegFrontFragment"
+        android:name="com.reemastyle.heena.HeenaLegFrontFragment"
+        android:label="HeenaLegFrontFragment" >
+        <action
+            android:id="@+id/action_heenaLegFrontFragment_to_bookHeenaFragment"
+            app:destination="@id/bookHeenaFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
+        <action
+            android:id="@+id/action_heenaLegFrontFragment_to_serviceDetailFragment"
+            app:destination="@id/serviceDetailFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
+    </fragment>
+    <fragment
+        android:id="@+id/heenaLegFrontBackFragment"
+        android:name="com.reemastyle.heena.HeenaLegFrontBackFragment"
+        android:label="HeenaLegFrontBackFragment" >
+        <action
+            android:id="@+id/action_heenaLegFrontBackFragment_to_bookHeenaFragment"
+            app:destination="@id/bookHeenaFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
+        <action
+            android:id="@+id/action_heenaLegFrontBackFragment_to_serviceDetailFragment"
+            app:destination="@id/serviceDetailFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
+    </fragment>
+    <fragment
+        android:id="@+id/heenaHandFrontBackFragment"
+        android:name="com.reemastyle.heena.HeenaHandFrontBackFragment"
+        android:label="HeenaHandFrontBackFragment" >
+        <action
+            android:id="@+id/action_heenaHandFrontBackFragment_to_serviceDetailFragment"
+            app:destination="@id/serviceDetailFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
+        <action
+            android:id="@+id/action_heenaHandFrontBackFragment_to_bookHeenaFragment"
+            app:destination="@id/bookHeenaFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"/>
+    </fragment>
 </navigation>
